k8s/cart-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: cart-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  selector:
    app: cart-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
